# weather-data

./: .gitignore  CHANGELOG.md  INITIAL_SETUP.md  README.md  pyproject.toml  requirements.txt
src/: openmeteo_ingestion.ipynb  openmeteo_silver_audit.ipynb  openmeteo_silver_staging.ipynb
src/utils/: fetch_openmeteo.py  no_data_found_exception.py  partition_sensor.sql  promote_staging_to_prod.py
weather_data/: dbt_project.yml
weather_data/models/: dim_date.sql  dim_location.sql  dim_sources.sql  dim_time.sql  fct_weather_observation.sql  sources.yml  stg_openmeteo.sql
